# hspice_tr0_parser

./: .gitignore  Cargo.toml  LICENSE  README.md  hspice_tr0_parser.py  pyproject.toml
.agent/rules/: code-style.md
.github/workflows/: ci.yml  release.yml
crates/hspice-core/: Cargo.toml
crates/hspice-core/src/: block_reader.rs  lib.rs  parser.rs  raw_parser.rs  reader.rs  stream.rs  types.rs  writer.rs
crates/hspice-core/tests/: integration_tests.rs
crates/hspice-ffi/: Cargo.toml
crates/hspice-ffi/src/: lib.rs
crates/hspice-python/: Cargo.toml
crates/hspice-python/src/: lib.rs
crates/hspice-wasm/: Cargo.toml  README.md  hspice_wasm.d.ts  package.json
crates/hspice-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  HOWTOTEST.md  HSPICE_TR0_FORMAT.md  SPICE3_RAW_FORMAT.md  STREAMING_API.md
docs/api/: c_cpp.md  golang.md  java.md  python.md  rust.md  wasm.md
example/: PinToPinSim.tr0
include/: hspice_tr0_parser.h
java/: README.md  pom.xml
java/src/main/java/com/hspice/: HspiceException.java  HspiceLibrary.java  HspiceParser.java  Variable.java  WaveformResult.java
src/: ffi.rs  lib.rs  parser.rs  reader.rs  stream.rs  types.rs  writer.rs
tests/: __init__.py  conftest.py  test_convert.py  test_formats.py  test_read.py  test_reference.py  test_stream.py  test_tr0_parser.py
