[package]
name = "hspicetr0parser"
version = "1.0.0"
edition = "2021"
description = "Read HSPICE binary files"
license = "MIT"

[lib]
name = "_hspcie_tr0_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310"] }
numpy = "0.27.1"
byteorder = "1.5.0"
memmap2 = "0.9.9"
rayon = "1.11.0"
