[workspace]
resolver = "2"
members = ["crates/hspice-core", "crates/hspice-python", "crates/hspice-ffi", "crates/hspice-wasm"]

[workspace.package]
version = "1.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/HaiwenZhang/hspice_tr0_parser"

[workspace.dependencies]
# Core dependencies
byteorder = "1.5.0"
memmap2 = "0.9.9"
num-complex = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
numpy = "0.23"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Internal
hspice-core = { path = "crates/hspice-core" }
