[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hspicetr0parser"
version = "1.2.0"
description = "Read HSPICE binary files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["maturin", "pytest"]

[tool.maturin]
manifest-path = "crates/hspice-python/Cargo.toml"
python-source = "."
module-name = "hspicetr0parser"
