[package]
name = "hspice-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for HSPICE binary file parsing"
keywords = ["hspice", "tr0", "parser", "spice", "simulation"]
categories = ["parser-implementations", "science"]

[lib]
name = "hspice_core"

[dependencies]
byteorder.workspace = true
memmap2.workspace = true
num-complex.workspace = true
thiserror.workspace = true
tracing.workspace = true
