[package]
name = "hspice-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C FFI bindings for HSPICE binary file parser"

[lib]
name = "hspicetr0parser"
crate-type = ["staticlib", "cdylib"]

[dependencies]
hspice-core.workspace = true
